--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;700&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="css/normalize.css"
@@ -19,9 +22,65 @@
       rel="stylesheet"
       href="css/styles.css"
     />
-    <title>Vite App</title>
+    <title>Homepage 4</title>
   </head>
   <body>
+    <header class="header">
+      <img
+        class="logo"
+        src="./assets/images/logo.svg"
+        alt="Logo"
+      />
+      <div class="button button-white">Request Beta Access</div>
+    </header>
+    <main class="banner">
+      <div class="article">
+        <h1 class="title">A super solution
+          for your business.</h1>
+          <p class="text">
+            Our marketing and sales automations help you scale your outreach to get more leads for your company.
+          </p>
+          <div class="button button-dark">Request Beta Access</div>
+      </div>
+      <picture>
+        <source
+            media="(min-width:1440px)"
+            srcset="./assets/images/image-hero-portrait@2x.webp"
+          />
+          <source
+            media="(min-width: 768px)"
+            srcset="./assets/images/image-hero-portrait@2x.webp"
+          />
+          <source
+            media="(min-width:360px)"
+            srcset="./assets/images/image-hero-landscape@2x.webp"
+          />
+          <img
+            class="article__image"
+            src="./assets/images/image-hero-landscape@2x.webp"
+            alt="image"
+          />
+      </picture>
+      <div class="numbers">
+        <div class="numbers__companies">
+          <p class="number">2K+</p>
+          <p class="number__name">COMPANIES</p>
+        </div>
+        <div class="numbers__languages">
+          <p class="number">8</p>
+          <p class="number__name">LANGUAGES</p>
+        </div>
+        <div class="numbers__leads">
+          <p class="number">1.2M</p>
+          <p class="number__name">LEADS</p>
+
+        </div>
+      </div>
+    </main>
+    <div class="man">
+      <
+    </div>
+  
     <script src="./js/scripts.js"></script>
   </body>
 </html>
